--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,7 @@
 
     "baseUrl": ".",
     "paths": {
-      "~*": ["src/*"],
-      "~styles/*": ["src/styles/*"]
+      "~/*": ["src/*"]
     }
   },
   "include": ["src"],
