--- a/.eslintrc
+++ b/.eslintrc
@@ -9,9 +9,17 @@
   ],
   "ignorePatterns": ["dist", ".eslintrc.cjs"],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["react-refresh", "unused-imports", "simple-import-sort", "prettier"],
+  "plugins": ["react", "react-refresh", "unused-imports", "simple-import-sort", "prettier"],
   "rules": {
+    "@typescript-eslint/consistent-type-imports": [
+      "warn",
+      { "prefer": "type-imports", "fixStyle": "inline-type-imports" }
+    ],
     "react-refresh/only-export-components": ["warn", { "allowConstantExport": true }],
+    "react/jsx-sort-props": [
+      "warn",
+      { "callbacksLast": true, "multiline": "last", "reservedFirst": true }
+    ],
     "prettier/prettier": "error",
     "unused-imports/no-unused-imports": "error",
     "simple-import-sort/imports": [
